--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,10 @@ h2{
   text-align: center;
   font-family: 'Quicksand', sans-serif;
 }
+
+#serv{
+  position: absolute;
+  padding-bottom: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
