--- a/styles.css
+++ b/styles.css
@@ -35,4 +35,6 @@ h2{
   padding-bottom: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-family: 'Quicksand', sans-serif;
+  color:whitesmoke;
 }
