--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 
 h1{
   color: whitesmoke;
-  font-size: 60px;
+  font-size: 10px;
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -30,11 +30,31 @@ h2{
   font-family: 'Quicksand', sans-serif;
 }
 
+h3{
+  text-align: center;
+}
+
 #serv{
-  position: absolute;
-  padding-bottom: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-image: url("images/s_image.jpg");
+  height:50vh;
+  padding:5px;
   font-family: 'Quicksand', sans-serif;
   color:whitesmoke;
+  font-weight: 200;
 }
+
+#serv > p{
+padding-top: 70px;
+}
+
+p{
+  letter-spacing: 0px;
+  font-size: 16px;
+}
+
+#logo>h1{
+  font-size: 40px;
+  font-weight: 900;
+}
+
+
