--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ h1{
 h2{
   text-align: center;
   font-family: 'Quicksand', sans-serif;
+  padding-top: 9%;
 }
 
 h3{
@@ -43,9 +44,7 @@ h3{
   font-weight: 200;
 }
 
-#serv > p{
-padding-top: 70px;
-}
+
 
 p{
   letter-spacing: 0px;
