--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-*{
-  
-}
-
 .main{
   margin: auto;
   text-align: center;
@@ -46,17 +42,23 @@ h4{
   background-size: cover;
   padding: 40px;
   color:whitesmoke;
+  font-family: 'Aladin', cursive;
 }
 
 #serv{
   background-image: url("images/s_image.jpg");
   height:50vh;
   padding:5px;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Aladin', cursive;
   color:whitesmoke;
   font-weight: 200;
   z-index: -450px;
 }
+
+#serv > p{
+  text-align: center;
+}
+
 
 .text-center>img{
   margin: 10px;
