--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,10 @@ h4{
   font-family: 'Aladin', cursive;
 }
 
+h5{
+  font-family: 'Aladin', cursive; 
+}
+
 #serv{
   background-image: url("images/s_image.jpg");
   height:50vh;
