add stylings to class social in the styling css

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+}
+
 .main{
   margin: auto;
   text-align: center;
@@ -9,7 +13,6 @@
   left:50%;
   position:absolute;
   transform:translate(-50%, -50%);
-  /* height: 100%; */
 }
 
 .mouse{
@@ -73,12 +76,17 @@ p{
   font-size: 20px;
 }
 
-.text{
-  transform:translate(-5%, -5%);
-  /* padding-right: 40%; */
-}
 .design-a,.develop-a,.prod-a{
   display: none;
+}
+
+.port{
+  
+}
+
+.social{
+  padding-left:35%;
+  padding-top: 60px;
 }
 
 
