--- a/styles.css
+++ b/styles.css
@@ -95,4 +95,27 @@ padding-top: 5%;
   text-align: center;
 }
 
+textarea {
+  width: 100%;
+  height: 200px;
+  color: white;
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px;
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px;
+  resize: vertical ;
+ }
+ #transparent{
+   background-color: transparent;
+ }
+
+ #jambo{
+  color: white;
+}
+ #jambo input{
+  color: white;
+  
+ }
 
