--- a/styles.css
+++ b/styles.css
@@ -82,13 +82,12 @@ p{
   display: none;
 }
 
-.port{
-padding-top: 5%;  
-}
+
 
 .social{
   padding-left:35%;
   padding-top: 60px;
+  
 }
 
 .del{
@@ -119,3 +118,116 @@ textarea {
   
  }
 
+ #pads{
+   padding: 25px;
+ }
+.pro{
+  padding-left: 25px;
+}
+.pro1{
+  padding-right: 25px;
+}
+
+.project1{
+  width: 300px;
+  height: 230px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
+
+.project2{
+  width: 301px;
+  height: 246px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
+
+.project3{
+  width: 301px;
+  height: 246px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
+
+.project4{
+  width: 302px;
+  height: 246px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
+
+.project5{
+  width: 300px;
+  height: 246px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
+
+.project6{
+  width: 300px;
+  height: 246px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
+
+.project7{
+  width: 300px;
+  height: 246px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
+
+.project8{
+  width: 300px;
+  height: 246px;
+  background-color:white;
+  z-index: 1;
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+}
